--- a/index.html
+++ b/index.html
@@ -98,15 +98,21 @@
             </div>
         </div>
 
-        <h2 class="category-title">اللحم مع الأرز</h2>
-        <div class="grid gap-4">
-            <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
-                <div class="flex items-center gap-3">
-                    <div class="w-16 h-16 bg-gray-200 rounded-lg flex items-center justify-center text-[10px] text-gray-400">صورة</div>
-                    <div><h3 class="font-bold">نفر لحم مندي</h3><p class="text-orange-600 text-sm">85 ريال</p></div>
-                </div>
-                <button onclick="addToCart('نفر لحم مندي', 85)" class="btn-fixed bg-orange-600 text-white font-bold">إضافة +</button>
+      <h2 class="category-title">اللحم مع الأرز</h2>
+<div class="grid gap-4">
+    <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
+        <div class="flex items-center gap-3">
+            <img src="meat.jpg" alt="نفر لحم مندي" class="w-16 h-16 rounded-lg object-cover shadow-sm">
+            
+            <div>
+                <h3 class="font-bold">نفر لحم مندي</h3>
+                <p class="text-orange-600 text-sm">85 ريال</p>
             </div>
+        </div>
+        
+        <button onclick="addToCart('نفر لحم مندي', 85)" class="btn-fixed bg-orange-600 text-white font-bold">إضافة +</button>
+    </div>
+</div>
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div class="flex items-center gap-3">
                     <div class="w-16 h-16 bg-gray-200 rounded-lg flex items-center justify-center text-[10px] text-gray-400">صورة</div>
@@ -249,6 +255,7 @@
     </script>
 </body>
 </html>
+
 
 
 
