--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <div class="grid gap-4">
     <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
         <div class="flex items-center gap-3">
-            <img src="meat.jpg" alt="نفر لحم مندي" class="w-16 h-16 rounded-lg object-cover shadow-sm">
+            <img src="لحم مندي.jpg" alt="نفر لحم مندي" class="w-16 h-16 rounded-lg object-cover shadow-sm">
             
             <div>
                 <h3 class="font-bold">نفر لحم مندي</h3>
@@ -255,6 +255,7 @@
     </script>
 </body>
 </html>
+
 
 
 
