--- a/index.html
+++ b/index.html
@@ -164,17 +164,57 @@
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div class="flex items-center gap-3">
                     <img src="edam.jpg" onerror="this.src='https://via.placeholder.com/100?text=إدام'" class="food-img">
-                    <h3 class="font-bold text-sm">إدامات (بامية/ملوخية/مشكل)</h3>
+                    <h3 class="font-bold text-sm">ملوخية</h3>
                 </div>
                 <div class="flex gap-1">
-                    <button onclick="addToCart('إدام كبير', 10)" class="btn-fixed bg-orange-600 text-white font-bold text-xs">كبير <span>10ر.س</span></button>
-                    <button onclick="addToCart('إدام صغير', 5)" class="btn-fixed bg-orange-600 text-white font-bold text-xs">صغير <span>5ر.س</span></button>
+                    <button onclick="addToCart('ملوخية كبير', 10)" class="btn-fixed bg-orange-600 text-white font-bold text-xs">كبير <span>10ر.س</span></button>
+                    <button onclick="addToCart('ملوخية صغير', 5)" class="btn-fixed bg-orange-600 text-white font-bold text-xs">صغير <span>5ر.س</span></button>
+                </div>
+            </div>
+             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
+                <div class="flex items-center gap-3">
+                    <img src="edam.jpg" onerror="this.src='https://via.placeholder.com/100?text=إدام'" class="food-img">
+                    <h3 class="font-bold text-sm">قرصان</h3>
+                </div>
+                <div class="flex gap-1">
+                    <button onclick="addToCart('قرصان كبير', 10)" class="btn-fixed bg-orange-600 text-white font-bold text-xs">كبير <span>10ر.س</span></button>
+                    <button onclick="addToCart('قرصان صغير', 5)" class="btn-fixed bg-orange-600 text-white font-bold text-xs">صغير <span>5ر.س</span></button>
+                </div>
+            </div>
+             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
+                <div class="flex items-center gap-3">
+                    <img src="edam.jpg" onerror="this.src='https://via.placeholder.com/100?text=إدام'" class="food-img">
+                    <h3 class="font-bold text-sm">بامية</h3>
+                </div>
+                <div class="flex gap-1">
+                    <button onclick="addToCart('بامية كبير', 10)" class="btn-fixed bg-orange-600 text-white font-bold text-xs">كبير <span>10ر.س</span></button>
+                    <button onclick="addToCart('بامية صغير', 5)" class="btn-fixed bg-orange-600 text-white font-bold text-xs">صغير <span>5ر.س</span></button>
+                </div>
+            </div>
+             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
+                <div class="flex items-center gap-3">
+                    <img src="edam.jpg" onerror="this.src='https://via.placeholder.com/100?text=إدام'" class="food-img">
+                    <h3 class="font-bold text-sm">مشكل فرن</h3>
+                </div>
+                <div class="flex gap-1">
+                    <button onclick="addToCart('مشكل فلرن كبير', 10)" class="btn-fixed bg-orange-600 text-white font-bold text-xs">كبير <span>10ر.س</span></button>
+                    <button onclick="addToCart('مشكل فرن صغير', 5)" class="btn-fixed bg-orange-600 text-white font-bold text-xs">صغير <span>5ر.س</span></button>
+                </div>
+            </div>
+             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
+                <div class="flex items-center gap-3">
+                    <img src="edam.jpg" onerror="this.src='https://via.placeholder.com/100?text=إدام'" class="food-img">
+                    <h3 class="font-bold text-sm">مشكل خضار</h3>
+                </div>
+                <div class="flex gap-1">
+                    <button onclick="addToCart('مشكل خضار كبير', 10)" class="btn-fixed bg-orange-600 text-white font-bold text-xs">كبير <span>10ر.س</span></button>
+                    <button onclick="addToCart('مشكل خضار صغير', 5)" class="btn-fixed bg-orange-600 text-white font-bold text-xs">صغير <span>5ر.س</span></button>
                 </div>
             </div>
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div class="flex items-center gap-3">
                     <img src="edam.jpg" onerror="this.src='https://via.placeholder.com/100?text=شعبي'" class="food-img">
-                    <h3 class="font-bold text-sm">جريش / فرسان</h3>
+                    <h3 class="font-bold text-sm">جريش</h3>
                 </div>
                 <div class="flex gap-1">
                     <button onclick="addToCart('جريش كبير', 9)" class="btn-fixed bg-orange-600 text-white font-bold text-xs">كبير <span>9ر.س</span></button>
@@ -213,6 +253,13 @@
                     <div><h3 class="font-bold">أم علي</h3><p class="text-orange-600 text-sm">10 ريال</p></div>
                 </div>
                 <button onclick="addToCart('أم علي', 10)" class="btn-fixed bg-orange-600 text-white font-bold">إضافة +</button>
+            </div>
+             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
+                <div class="flex items-center gap-3">
+                    <img src="dessert.jpg" onerror="this.src='https://via.placeholder.com/100?text=حلى'" class="food-img">
+                    <div><h3 class="font-bold">حلا النجم</h3><p class="text-orange-600 text-sm">6 ريال</p></div>
+                </div>
+                <button onclick="addToCart('حلا النجم', 6)" class="btn-fixed bg-orange-600 text-white font-bold">إضافة +</button>
             </div>
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div class="flex items-center gap-3">
@@ -304,3 +351,4 @@
     </script>
 </body>
 </html>
+
