--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
             </div>
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div class="flex items-center gap-3">
-                    <img src="tes.jpg" onerror="this.src='https://via.placeholder.com/100?text=لحم'" class="food-img">
+                    <img src="نص تيس كامل مندي.jpg" onerror="this.src='https://via.placeholder.com/100?text=لحم'" class="food-img">
                     <div><h3 class="font-bold">نص تيس مندي</h3><p class="text-orange-600 text-sm">690 ريال</p></div>
                 </div>
                 <button onclick="addToCart('نص تيس مندي', 690)" class="btn-fixed bg-orange-600 text-white font-bold">إضافة +</button>
             </div>
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div class="flex items-center gap-3">
-                    <img src="tes.jpg" onerror="this.src='https://via.placeholder.com/100?text=لحم'" class="food-img">
+                    <img src="ربع تيس كامل مندي.jpg" onerror="this.src='https://via.placeholder.com/100?text=لحم'" class="food-img">
                     <div><h3 class="font-bold">ربع تيس مندي</h3><p class="text-orange-600 text-sm">350 ريال</p></div>
                 </div>
                 <button onclick="addToCart('ربع تيس مندي', 350)" class="btn-fixed bg-orange-600 text-white font-bold">إضافة +</button>
@@ -78,7 +78,7 @@
             </div>
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div class="flex items-center gap-3">
-                    <img src="hashi.jpg" onerror="this.src='https://via.placeholder.com/100?text=حاشي'" class="food-img">
+                    <img src="نقر لحم حاشي.jpg" onerror="this.src='https://via.placeholder.com/100?text=حاشي'" class="food-img">
                     <div><h3 class="font-bold">نفر لحم حاشي</h3><p class="text-orange-600 text-sm">50 ريال</p></div>
                 </div>
                 <button onclick="addToCart('نفر لحم حاشي', 50)" class="btn-fixed bg-orange-600 text-white font-bold">إضافة +</button>
@@ -89,7 +89,7 @@
         <div class="grid gap-4">
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div class="flex items-center gap-3">
-                    <img src="chicken.jpg" onerror="this.src='https://via.placeholder.com/100?text=دجاج'" class="food-img">
+                    <img src="دجاج مندي.jpg" onerror="this.src='https://via.placeholder.com/100?text=دجاج'" class="food-img">
                     <h3 class="font-bold">دجاج مندي</h3>
                 </div>
                 <div class="flex gap-1">
@@ -99,7 +99,7 @@
             </div>
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div class="flex items-center gap-3">
-                    <img src="chicken.jpg" onerror="this.src='https://via.placeholder.com/100?text=دجاج'" class="food-img">
+                    <img src="دجاج مدفونjpg.jpg" onerror="this.src='https://via.placeholder.com/100?text=دجاج'" class="food-img">
                     <h3 class="font-bold">دجاج مدفون</h3>
                 </div>
                 <div class="flex gap-1">
@@ -109,7 +109,7 @@
             </div>
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div class="flex items-center gap-3">
-                    <img src="chicken.jpg" onerror="this.src='https://via.placeholder.com/100?text=دجاج'" class="food-img">
+                    <img src="دجاج مضفوط.jpg" onerror="this.src='https://via.placeholder.com/100?text=دجاج'" class="food-img">
                     <h3 class="font-bold">دجاج مضغوط</h3>
                 </div>
                 <div class="flex gap-1">
@@ -391,4 +391,5 @@
     
 </body>
 </html>
+
 
