--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                 <div class="flex items-center gap-3">
                     <img src="دجاج مندي.jpg" onerror="this.src='https://via.placeholder.com/100?text=دجاج'" class="food-img">
                     <h3 class="font-bold">دجاج مندي</h3>
+                    <p class="text-orange-600 text-[10px] leading-tight mt-1">يمكنك اختيار نوع الأرز بعد الإضافة</p>
                 </div>
                 <div class="flex gap-1">
                     <button onclick="addToCart('حبة دجاج مندي', 42)" class="btn-fixed bg-orange-600 text-white font-bold text-xs">كاملة <span>42ر.س</span></button>
@@ -101,6 +102,7 @@
                 <div class="flex items-center gap-3">
                     <img src="دجاج مدفونjpg.jpg" onerror="this.src='https://via.placeholder.com/100?text=دجاج'" class="food-img">
                     <h3 class="font-bold">دجاج مدفون</h3>
+                    <p class="text-orange-600 text-[10px] leading-tight mt-1">يمكنك اختيار نوع الأرز بعد الإضافة</p>
                 </div>
                 <div class="flex gap-1">
                     <button onclick="addToCart('حبة دجاج مدفون', 42)" class="btn-fixed bg-orange-600 text-white font-bold text-xs">كاملة <span>42ر.س</span></button>
@@ -121,6 +123,7 @@
                 <div class="flex items-center gap-3">
                     <img src="chicken.jpg" onerror="this.src='https://via.placeholder.com/100?text=دجاج'" class="food-img">
                     <h3 class="font-bold">دجاج شواية</h3>
+                    <p class="text-orange-600 text-[10px] leading-tight mt-1">يمكنك اختيار نوع الأرز بعد الإضافة</p>
                 </div>
                 <div class="flex gap-1">
                     <button onclick="addToCart('حبة دجاج شواية', 42)" class="btn-fixed bg-orange-600 text-white font-bold text-xs">كاملة <span>42ر.س</span></button>
@@ -131,6 +134,7 @@
                 <div class="flex items-center gap-3">
                     <img src="chicken.jpg" onerror="this.src='https://via.placeholder.com/100?text=دجاج'" class="food-img">
                     <h3 class="font-bold">دجاج مظبي</h3>
+                    <p class="text-orange-600 text-[10px] leading-tight mt-1">يمكنك اختيار نوع الأرز بعد الإضافة</p>
                 </div>
                 <div class="flex gap-1">
                     <button onclick="addToCart('حبة دجاج مظبي', 42)" class="btn-fixed bg-orange-600 text-white font-bold text-xs">كاملة <span>42ر.س</span></button>
@@ -141,6 +145,7 @@
                 <div class="flex items-center gap-3">
                     <img src="chicken.jpg" onerror="this.src='https://via.placeholder.com/100?text=دجاج'" class="food-img">
                     <h3 class="font-bold">دجاج حنيذ</h3>
+                    <p class="text-orange-600 text-[10px] leading-tight mt-1">يمكنك اختيار نوع الأرز بعد الإضافة</p>
                 </div>
                 <div class="flex gap-1">
                     <button onclick="addToCart('حبة دجاج حنيذ', 42)" class="btn-fixed bg-orange-600 text-white font-bold text-xs">كاملة <span>42ر.س</span></button>
@@ -151,6 +156,7 @@
                 <div class="flex items-center gap-3">
                     <img src="chicken.jpg" onerror="this.src='https://via.placeholder.com/100?text=دجاج'" class="food-img">
                     <h3 class="font-bold">دجاج مقلوبة</h3>
+                    <p class="text-orange-600 text-[10px] leading-tight mt-1">يمكنك اختيار نوع الأرز بعد الإضافة</p>
                 </div>
                 <div class="flex gap-1">
                     <button onclick="addToCart('حبة دجاج مقلوبة', 45)" class="btn-fixed bg-orange-600 text-white font-bold text-xs">كاملة <span>45ر.س</span></button>
@@ -440,6 +446,7 @@
     
 </body>
 </html>
+
 
 
 
